# openclaw-local-installer

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHEATSHEET.md  COMPLETION_REPORT.md  Cargo.toml  DEVELOPMENT.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_READY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_zh-CN.md  READY_TO_BUILD.md  RELEASE_GUIDE.md  TODO.md  WINDOWS_BUILD.md  build.bat  build.sh  demo.sh  generate-icons.js  index.html  license-generator.py  package-lock.json  package.json
.github/workflows/: build.yml  docker-build.yml  release.yml  test.yml
docker/: Dockerfile  patch-ollama-host.js
payment/: package.json  server.js  wechat-config.js
public/: payment-qr-base64.txt
public/chat/: index.html
public/chat/assets/: index-278SlQE-.js  index-5I56NDfg.js  index-B4BA5RKy.js  index-BRyHcFA0.js  index-BVxjeSLi.css  index-C8gVdyQf.js  index-CGr8EMsW.css  index-CabJu4Ji.js  index-CjGAXYC_.css  index-D4mAArlJ.js  index-DbLrgcn6.js  index-OLDqsILV.js  index-SkLSVcd_.css
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: download.rs  hardware.rs  installer.rs  installer.rs.patch  main.rs  models.rs  skills.rs  updater.rs
src/assets/: qr-code.txt
src/components/: PaymentModal.tsx
tools/: license_generator.bat  license_generator.py  license_generator_gui.py
