[package]
name = "openclaw-local-installer"
version = "0.1.0"
description = "OpenClaw 本地版安装器 - 自动检测硬件并配置本地模型"
authors = ["OpenClaw Community"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
wmi = "0.14"  # Windows 硬件检测
winapi = { version = "0.3", features = ["winuser", "sysinfoapi"], optional = true }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
dirs = "6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "sysinfoapi"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"  # 优化体积
strip = true
