[package]
name = "openclaw-local-installer"
version = "0.2.0"
description = "OpenClaw Local Installer"
authors = ["OpenClaw Community"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "^2", features = ["devtools"] }
tauri-plugin-shell = "^2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
dirs = "6"
thiserror = "2"
anyhow = "1"
zip = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "sysinfoapi"] }
wmi = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
